Add drawables rsc, modify some margin & padding, and add FavoriteCoffee for future use

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,26 +3,26 @@
     <string name="title_home">List Coffee</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
-    <string name="coffee1">Coffee title 1</string>
-    <string name="coffee2">Coffee title 2</string>
-    <string name="coffee3">Coffee title 3</string>
-    <string name="coffee4">Coffee title 4</string>
-    <string name="coffee5">Coffee title 5</string>
-    <string name="coffee6">Coffee title 6</string>
-    <string name="coffee7">Coffee title 7</string>
-    <string name="coffee8">Coffee title 8</string>
-    <string name="coffee9">Coffee title 9</string>
-    <string name="coffee10">Coffee title 10</string>
-    <string name="coffee_desc1">Coffee desc 1</string>
-    <string name="coffee_desc2">Coffee desc 2</string>
-    <string name="coffee_desc3">Coffee desc 3</string>
-    <string name="coffee_desc4">Coffee desc 4</string>
-    <string name="coffee_desc5">Coffee desc 5</string>
-    <string name="coffee_desc6">Coffee desc 6</string>
-    <string name="coffee_desc7">Coffee desc 7</string>
-    <string name="coffee_desc8">Coffee desc 8</string>
-    <string name="coffee_desc9">Coffee desc 9</string>
-    <string name="coffee_desc10">Coffee desc 10</string>
+    <string name="coffee1">Espresso</string>
+    <string name="coffee2">Red Eye</string>
+    <string name="coffee3">Americano</string>
+    <string name="coffee4">Cafe au Lait</string>
+    <string name="coffee5">Macchiato</string>
+    <string name="coffee6">Cortado</string>
+    <string name="coffee7">Breve</string>
+    <string name="coffee8">Cappuccino</string>
+    <string name="coffee9">Cafe Latte</string>
+    <string name="coffee10">Mocha</string>
+    <string name="coffee_desc1">The espresso, also known as a short black, is approximately 1 oz. of highly concentrated coffee. Although simple in appearance, it can be difficult to master.</string>
+    <string name="coffee_desc2">The red eye\'s purpose is to add a boost of caffeine to your standard cup of coffee.</string>
+    <string name="coffee_desc3">Americanos are popular breakfast drinks and thought to have originated during World War II. Soldiers would add water to their coffee to extend their rations farther. The water dilutes the espresso while still maintaining a high level of caffeine.</string>
+    <string name="coffee_desc4">The cafe au lait is typically made with French press coffee instead of an espresso shot to bring out the different flavors in the coffee. It is then paired with scalded milk instead of steamed milk and poured at a 50/50 ratio.</string>
+    <string name="coffee_desc5">The word macchiato means mark or stain. This is in reference to the mark that steamed milk leaves on the surface of the espresso as it is dashed into the drink. Flavoring syrups are often added to the drink according to customer preference.</string>
+    <string name="coffee_desc6">The cortado takes the macchiato one step further by evenly balancing the espresso with warm milk in order to reduce the acidity.</string>
+    <string name="coffee_desc7">The breve provides a decadent twist on the average espresso, adding steamed half-and-half to create a rich and creamy texture.</string>
+    <string name="coffee_desc8">This creamy coffee drink is usually consumed at breakfast time in Italy and is loved in the United States as well. It is usually associated with indulgence and comfort because of its thick foam layer and additional flavorings that can be added to it.</string>
+    <string name="coffee_desc9">Cafe lattes are considered an introductory coffee drink since the acidity and bitterness of coffee are cut by the amount of milk in the beverage. Flavoring syrups are often added to the latte for those who enjoy sweeter drinks.</string>
+    <string name="coffee_desc10">The mocha is considered a coffee and hot chocolate hybrid. The chocolate powder or syrup gives it a rich and creamy flavor and cuts the acidity of the espresso.</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="coffee_name">Coffee Name %s</string>
